# warehouse

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8893319964e4_first_migration.py  9245b3e1dca5_first_migration.py
app/: main.py
app/api/: __init__.py  routers.py
app/api/endpoints/: __init__.py  order.py  product.py
app/core/: base.py  config.py  db.py
app/crud/: base.py  order.py  product.py
app/models/: order.py  product.py
app/schemas/: order.py  product.py
tests/: conftest.py  test_orders.py  test_products.py
tests/fixtures/: orders.py  products.py
